Content, some bg experimentation

--- a/haml/index.haml
+++ b/haml/index.haml
@@ -1,3 +1,15 @@
 !!!
 %head
+  %title Tetragram
+  %link(rel="stylesheet" href="style.css" type="text/css")
 %body
+  %section.feature
+    %img.feature__logo(src="media/tetragramglyph.png")
+    %h1 Tetragram
+    %p The secret ingredient for small dispenseries.
+  %section.email
+    %h2 Sign up for Updates
+    //Email sign up
+  %section.social
+    %h2 Find us on social media
+  %footer &copy; 2017 Interactive Merchant Services. All rights reserved.
