--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -14,4 +14,6 @@ $purple: #6559A0;
 $purple-t1: #9A8FC1;
 $purple-t2: #BDB1D4;
 
-$grey: #363636;
+$grey: #02100a;
+
+$serif: 'Libre Baskerville', Baskerville, Georgia, serif;
