--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,6 @@
 @import "reset";
+@import "bourbon";
+@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');
 @import "variables";
 @import "globals";
+@import "home";
