--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -1,4 +1,29 @@
 body{
   background-color: $grey;
-  background-image: url('media/bgtile1.png');
+//  background-image: url('media/bgtile1.png');
+  font-family: $serif;
+}
+
+h1{
+  font-size:3.998em;
+}
+
+h2{
+  font-size:2.827em;
+}
+
+h3{
+  font-size:1.999em;
+}
+
+h4{
+  font-size:1.414em;
+}
+
+h5{
+  font-size:0.707em;
+}
+
+h6{
+  font-size:0.5em;
 }
