--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* http://meyerweb.com/eric/tools/css/reset/
  * v2.0 | 20110126
  * License: none (public domain) */
+@import url("https://fonts.googleapis.com/css?family=Libre+Baskerville");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -45,5 +46,81 @@ table {
   border-spacing: 0; }
 
 body {
-  background-color: #363636;
-  background-image: url("media/bgtile1.png"); }
+  background-color: #02100a;
+  font-family: "Libre Baskerville", Baskerville, Georgia, serif; }
+
+h1 {
+  font-size: 3.998em; }
+
+h2 {
+  font-size: 2.827em; }
+
+h3 {
+  font-size: 1.999em; }
+
+h4 {
+  font-size: 1.414em; }
+
+h5 {
+  font-size: 0.707em; }
+
+h6 {
+  font-size: 0.5em; }
+
+* {
+  box-sizing: border-box; }
+
+.feature {
+  background-image: url("media/get-budding-72798.jpg");
+  background-size: cover;
+  background-position: center center; }
+
+.feature::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1; }
+
+.feature__overlay {
+  position: relative;
+  padding: 5em;
+  z-index: 2; }
+
+.feature__headline {
+  color: white; }
+
+.feature__tagline {
+  padding: 0.5em;
+  color: white;
+  background-color: #6559A0;
+  position: relative; }
+
+.feature__tagline::before, feature__tagline::after {
+  content: '';
+  border: 1em solid #0088CA;
+  position: absolute; }
+
+.feature__tagline:before {
+  left: 0;
+  border-top: 0;
+  border-left: 0; }
+
+.feature__tagline:after {
+  right: 10px;
+  border-bottom: 0;
+  border-right: 0;
+  overflow: visible; }
+
+.feature__logo {
+  display: block;
+  margin: 0 auto 0; }
+
+.email {
+  background-image: url("media/pattern.png"); }
