--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,8 @@
 @import "reset";
 @import "bourbon";
 @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css');
 @import "variables";
 @import "globals";
 @import "home";
