--- a/haml/index.haml
+++ b/haml/index.haml
@@ -9,23 +9,25 @@
       %h1.feature__headline Tetragram
       %h3.feature__tagline The secret ingredient for small dispenseries.
   %section.email
-    %h2 Sign up for Updates
+    %h2 Sign up for Email Updates
+    %p We don't sell email addresses. We send emails infrequently.
     #mc_embed_signup
       %form(action="//ttragram.us16.list-manage.com/subscribe/post?u=7bc1fe88520458fcb25ea043b&amp;id=54fb80b5df" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate)
         #mc_embed_signup_scroll
-          .indicates-required
-            %span.asterisk *
-            indicates required
           .mc-field-group
             %label(for="mce-EMAIL")
               Email Address
               %span.asterisk *
             %input(type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL")
           .mc-field-group
-            %label(for="mce-FNAME") First Name
+            %label(for="mce-FNAME")
+              First Name
+              %span.email__optional Optional
             %input(type="text" value="" name="FNAME" class="" id="mce-FNAME")
           .mc-field-group
-            %label(for="mce-LNAME") Last Name
+            %label(for="mce-LNAME")
+              Last Name
+              %span.email__optional Optional
             %input(type="text" value="" name="LNAME" class="" id="mce-LNAME")
           #mce-responses
             .response#mce-error-response(style="display:none")
@@ -37,6 +39,9 @@
           %script(type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js')
           :javascript
             (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);)
-  %section.social
-    %h2 Find us on social media
-  %footer &copy; 2017 Interactive Merchant Services. All rights reserved.
+  %footer
+    &copy; 2017 Interactive Merchant Services. All rights reserved.
+    .social-icons
+      %a.icon-social-instagram(href="https://www.instagram.com/ttragram/")
+      %a.icon-social-facebook(href="https://www.facebook.com/ttragram")
+      %a.icon-social-twitter(href="https://twitter.com/ttragram/")
