--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,66 +1,119 @@
 *{
   box-sizing: border-box;
+  color: white;
 }
 
 .feature{
   background-image: url('media/get-budding-72798.jpg');
   background-size: cover;
   background-position: center center;
+  overflow: hidden;
+  position: relative;
 }
 
 .feature::after{
   content:'';
   display:block;
   position:absolute;
-  width:100%;
-  height:100%;
   top:0;
   bottom:0;
   left:0;
   right:0;
-  background-color: rgba(0,0,0,0.8);
+  @include linear-gradient($purple-t2 0, $purple 100%);
+  opacity:0.7;
   z-index:1;
 }
 
 .feature__overlay{
   position:relative;
-  padding: 5em;
   z-index:2;
+}
+.feature__logo{
+  width: 100%;
+  max-width: 20em;
+  display:block;
+  margin:0 auto 0;
+  padding: 2em;
 }
 .feature__headline{
   color: white;
+  text-align: center;
+  margin-bottom: 1em;
+  font-family: $serif;
 }
 .feature__tagline{
   padding:0.5em;
-  color: white;
-  background-color:$purple;
+  color: $blue;
+  background-color:transparentize(white, .2);
   position:relative;
+  text-align: center;
 }
-.feature__tagline::before,feature__tagline::after{
+.feature__tagline:before,.feature__tagline:after{
   content:'';
-  border:1em solid $blue;
+  border:1em solid transparentize(white, .5);
   position:absolute;
+  top:0;
 }
 .feature__tagline:before{
-  left:0;
-  border-top:0;
-  border-left:0;
+  left:-2em;
+  border-top-color: transparent;
+  border-left-color:transparent;
 }
 .feature__tagline:after{
-  right:10px;
-  border-bottom:0;
-  border-right:0;
+  right:-2em;
+  border-bottom-color: transparent;
+  border-right-color: transparent;
   overflow: visible;
 }
 
-.feature__logo{
-  display:block;
-  margin:0 auto 0;
+section.email{
+  background-image: url('media/pattern.png');
+  background-color: $blue-s1;
+  padding: 1em;
+  color: white;
 }
 
-.feature__headline{}
-.feature__tagline{}
+.email input{
+  margin-top:0.5em;
+  color: $grey;
+}
+.email label{
+  margin-top: 1em;
+  display:block;
+}
+.email p{
+  margin: 1em auto 1em;
+}
 
-.email{
-  background-image: url('media/pattern.png');
+.email__optional{
+  text-transform: uppercase;
+  color: white;
+  background-color: $blue;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius:4px;
+  margin-left: 1em;
+}
+input.button{
+  background-color: $blue;
+  color: white;
+}
+footer{
+  padding: 1em;
+  background-color: $grey;
+}
+.social-icons{
+  padding: 1em 0;
+}
+.social-icons a{
+  font-size: 2em;
+  text-align: center;
+  text-decoration: none;
+  margin: 0 0.5em;
+}
+.social-icons a:first-child {
+  margin-left:0;
+}
+.social-icons a:hover{
+  color: $green;
 }
