--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
  * v2.0 | 20110126
  * License: none (public domain) */
 @import url("https://fonts.googleapis.com/css?family=Libre+Baskerville");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -47,80 +49,166 @@ table {
 
 body {
   background-color: #02100a;
-  font-family: "Libre Baskerville", Baskerville, Georgia, serif; }
+  font-family: "Open Sans", Myriad, Helvetica, Arial, sans-serif; }
 
 h1 {
-  font-size: 3.998em; }
+  font-size: 2.441em; }
 
 h2 {
-  font-size: 2.827em; }
+  font-size: 1.953em; }
 
 h3 {
-  font-size: 1.999em; }
+  font-size: 1.563em; }
 
 h4 {
-  font-size: 1.414em; }
+  font-size: 1.25em; }
 
-h5 {
-  font-size: 0.707em; }
+p {
+  font-size: 1.2em;
+  line-height: 1.4; }
 
-h6 {
-  font-size: 0.5em; }
+@media screen and (min-width: 40em) {
+  h1 {
+    font-size: 3.998em; }
+
+  h2 {
+    font-size: 2.827em; }
+
+  h3 {
+    font-size: 1.999em; }
+
+  h4 {
+    font-size: 1.414em; }
+
+  h5 {
+    font-size: 0.707em; }
+
+  h6 {
+    font-size: 0.5em; } }
+input {
+  display: block;
+  width: 100%;
+  padding: 0.5em;
+  font-family: "Open Sans", Myriad, Helvetica, Arial, sans-serif;
+  outline: #004364;
+  border: 1px solid #02100a;
+  font-size: 1.3em;
+  border-radius: 5px; }
+
+img {
+  max-width: 100%; }
 
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  color: white; }
 
 .feature {
   background-image: url("media/get-budding-72798.jpg");
   background-size: cover;
-  background-position: center center; }
+  background-position: center center;
+  overflow: hidden;
+  position: relative; }
 
 .feature::after {
   content: '';
   display: block;
   position: absolute;
-  width: 100%;
-  height: 100%;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #BDB1D4;
+  background-image: -webkit-linear-gradient(#BDB1D4 0, #6559A0 100%);
+  background-image: linear-gradient(#BDB1D4 0, #6559A0 100%);
+  opacity: 0.7;
   z-index: 1; }
 
 .feature__overlay {
   position: relative;
-  padding: 5em;
   z-index: 2; }
 
+.feature__logo {
+  width: 100%;
+  max-width: 20em;
+  display: block;
+  margin: 0 auto 0;
+  padding: 2em; }
+
 .feature__headline {
-  color: white; }
+  color: white;
+  text-align: center;
+  margin-bottom: 1em;
+  font-family: "Libre Baskerville", Baskerville, Georgia, serif; }
 
 .feature__tagline {
   padding: 0.5em;
-  color: white;
-  background-color: #6559A0;
-  position: relative; }
+  color: #0088CA;
+  background-color: rgba(255, 255, 255, 0.8);
+  position: relative;
+  text-align: center; }
 
-.feature__tagline::before, feature__tagline::after {
+.feature__tagline:before, .feature__tagline:after {
   content: '';
-  border: 1em solid #0088CA;
-  position: absolute; }
+  border: 1em solid rgba(255, 255, 255, 0.5);
+  position: absolute;
+  top: 0; }
 
 .feature__tagline:before {
-  left: 0;
-  border-top: 0;
-  border-left: 0; }
+  left: -2em;
+  border-top-color: transparent;
+  border-left-color: transparent; }
 
 .feature__tagline:after {
-  right: 10px;
-  border-bottom: 0;
-  border-right: 0;
+  right: -2em;
+  border-bottom-color: transparent;
+  border-right-color: transparent;
   overflow: visible; }
 
-.feature__logo {
-  display: block;
-  margin: 0 auto 0; }
+section.email {
+  background-image: url("media/pattern.png");
+  background-color: #004364;
+  padding: 1em;
+  color: white; }
 
-.email {
-  background-image: url("media/pattern.png"); }
+.email input {
+  margin-top: 0.5em;
+  color: #02100a; }
+
+.email label {
+  margin-top: 1em;
+  display: block; }
+
+.email p {
+  margin: 1em auto 1em; }
+
+.email__optional {
+  text-transform: uppercase;
+  color: white;
+  background-color: #0088CA;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-left: 1em; }
+
+input.button {
+  background-color: #0088CA;
+  color: white; }
+
+footer {
+  padding: 1em;
+  background-color: #02100a; }
+
+.social-icons {
+  padding: 1em 0; }
+
+.social-icons a {
+  font-size: 2em;
+  text-align: center;
+  text-decoration: none;
+  margin: 0 0.5em; }
+
+.social-icons a:first-child {
+  margin-left: 0; }
+
+.social-icons a:hover {
+  color: #539341; }
