--- a/style.css
+++ b/style.css
@@ -107,7 +107,8 @@ img {
   background-size: cover;
   background-position: center center;
   overflow: hidden;
-  position: relative; }
+  position: relative;
+  padding-bottom: 2em; }
 
 .feature::after {
   content: '';
@@ -129,46 +130,93 @@ img {
 
 .feature__logo {
   width: 100%;
-  max-width: 20em;
+  max-width: 15rem;
   display: block;
   margin: 0 auto 0;
-  padding: 2em; }
+  padding: 2rem; }
+  @media screen and (min-width: 40em) {
+    .feature__logo {
+      margin-left: 0;
+      margin-right: 2rem; } }
 
 .feature__headline {
   color: white;
   text-align: center;
   margin-bottom: 1em;
   font-family: "Libre Baskerville", Baskerville, Georgia, serif; }
+  @media screen and (min-width: 40em) {
+    .feature__headline {
+      display: -webkit-box;
+      display: -moz-box;
+      display: box;
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -moz-box-align: center;
+      box-align: center;
+      -webkit-align-items: center;
+      -moz-align-items: center;
+      -ms-align-items: center;
+      -o-align-items: center;
+      align-items: center;
+      -ms-flex-align: center;
+      -webkit-box-pack: center;
+      -moz-box-pack: center;
+      box-pack: center;
+      -webkit-justify-content: center;
+      -moz-justify-content: center;
+      -ms-justify-content: center;
+      -o-justify-content: center;
+      justify-content: center;
+      -ms-flex-pack: center;
+      margin-top: 1em;
+      margin-bottom: 0.5em; } }
 
 .feature__tagline {
   padding: 0.5em;
   color: #0088CA;
   background-color: rgba(255, 255, 255, 0.8);
   position: relative;
-  text-align: center; }
+  text-align: center;
+  max-width: 45rem;
+  margin: 0 auto 3em; }
 
-.feature__tagline:before, .feature__tagline:after {
-  content: '';
-  border: 1em solid rgba(255, 255, 255, 0.5);
-  position: absolute;
-  top: 0; }
-
-.feature__tagline:before {
-  left: -2em;
+/*.feature__tagline:before,.feature__tagline:after{
+  content:'';
+  border:1em solid transparentize(white, .2);
+  position:absolute;
+  top:0;
+}
+.feature__tagline:before{
+  left:-2em;
+  top: -1px;
   border-top-color: transparent;
-  border-left-color: transparent; }
-
-.feature__tagline:after {
-  right: -2em;
+  border-left-color:transparent;
+}
+.feature__tagline:after{
+  right:-2em;
+  top:.5px;
   border-bottom-color: transparent;
   border-right-color: transparent;
-  overflow: visible; }
+  overflow: visible;
+}*/
+.feature__about {
+  max-width: 50rem;
+  padding: 0 1em;
+  margin: 1em auto 0; }
 
 section.email {
   background-image: url("media/pattern.png");
   background-color: #004364;
-  padding: 1em;
+  padding: 2em 1em;
   color: white; }
+
+section.email > * {
+  max-width: 50rem;
+  margin-left: auto;
+  margin-right: auto; }
 
 .email input {
   margin-top: 0.5em;
@@ -179,7 +227,7 @@ section.email {
   display: block; }
 
 .email p {
-  margin: 1em auto 1em; }
+  margin: 1.5em auto 1.5em; }
 
 .email__optional {
   text-transform: uppercase;
@@ -191,8 +239,17 @@ section.email {
   margin-left: 1em; }
 
 input.button {
+  position: relative;
   background-color: #0088CA;
-  color: white; }
+  color: white;
+  margin-top: 1em;
+  margin-bottom: 2em;
+  top: 5px;
+  transition: box-shadow 0.25s ease-out, top 0.25s ease-out; }
+
+input.button:hover {
+  box-shadow: 0px 5px 15px #02100a;
+  top: 0; }
 
 footer {
   padding: 1em;
@@ -205,7 +262,8 @@ footer {
   font-size: 2em;
   text-align: center;
   text-decoration: none;
-  margin: 0 0.5em; }
+  margin: 0 0.5em;
+  transition: color 0.25s ease-in-out; }
 
 .social-icons a:first-child {
   margin-left: 0; }
