animations for some swag

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -2,7 +2,11 @@
   box-sizing: border-box;
   color: white;
 }
-
+body{
+  animation: opacity-fade 1s ease-in-out, push-up 1s ease-in-out;
+  color: $blue-s1;
+  position: relative;
+}
 .feature{
   background-image: url('media/get-budding-72798.jpg');
   background-size: cover;
@@ -23,6 +27,7 @@
   @include linear-gradient($purple-t2 0, $purple 100%);
   opacity:0.7;
   z-index:1;
+  animation: opacity-fade--campaign 2s ease-in-out;
 }
 
 .feature__overlay{
@@ -153,4 +158,17 @@ footer{
 }
 .social-icons a:hover{
   color: $green;
+}
+
+@keyframes opacity-fade{
+  0%{opacity:0;}
+  100%{opacity:1;}
+}
+@keyframes opacity-fade--campaign{
+  0%{opacity: 0;}
+  100%{opacity: 0.7}
+}
+@keyframes push-up{
+  0%{top:-10px}
+  100%{top:0;}
 }
