Meta viewport fix

--- a/haml/index.haml
+++ b/haml/index.haml
@@ -2,6 +2,8 @@
 %head
   %title Tetragram
   %link(rel="stylesheet" href="style.css" type="text/css")
+  %meta(name="viewport" content="width=device-width, initial-scale=1")
+
 %body
   %section.feature
     .feature__overlay
