--- a/haml/index.haml
+++ b/haml/index.haml
@@ -14,9 +14,8 @@
       %h1.feature__headline
         %img.feature__logo(src="media/tetragramglyph.png")
         Tetragram
-      %h3.feature__tagline The secret ingredient for small dispenseries.
-      %p.feature__about We combine intelligent, human point of sale software with detailed and rigorous compliance reporting to take the guesswork out of running a dispensary.
-      %p.feature__about We're currently in research and planning and will be in alpha by early 2018.
+      %h3.feature__tagline Understanding cannabis is getting easier.
+      %p.feature__about We're empowering medical & recreational customers to record their personal experiences with cannabis through smart software.
   %section.email
     %h2 Sign up for Email Updates
     %p We don't sell email addresses. We send emails infrequently.
