Moving around images, fixing CSS

--- a/haml/index.haml
+++ b/haml/index.haml
@@ -3,6 +3,23 @@
   %title Tetragram
   %link(rel="stylesheet" href="style.css" type="text/css")
   %meta(name="viewport" content="width=device-width, initial-scale=1")
+  %link{:href => "/favicon.ico", :rel => "shortcut icon"}
+
+  -# iPad 3 Retina Display
+  -# %link{:rel => "apple-touch-icon-precomposed", :sizes => "144x144", :href => "/img/touch/apple-touch-icon-144x144-precomposed.png"}
+
+  -# iPhone 4 Retina display
+  -# %link{:rel => "apple-touch-icon-precomposed", :sizes => "114x114", :href => "/img/touch/apple-touch-icon-114x114-precomposed.png"}
+
+  -# iPad non-Retina display
+  -# %link{:rel => "apple-touch-icon-precomposed", :sizes => "72x72", :href => "/img/touch/apple-touch-icon-72x72-precomposed.png"}
+  
+  -# Non-Retina iPhone, iPod Touch, Android 2.1+
+  -# %link{:rel => "apple-touch-icon-precomposed", :href => "/img/touch/apple-touch-icon-57x57-precomposed.png"}
+  
+  -# Nokia
+  -# %link{:rel => "shortcut icon", :href => "/img/touch/apple-touch-icon.png"}
+  
   :javascript
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-102656117-1', 'auto');
@@ -12,7 +29,7 @@
     .feature__overlay
 
       %h1.feature__headline
-        %img.feature__logo(src="media/tetragramglyph.png")
+        %img.feature__logo(src="img/tetragramglyph.png")
         Tetragram
       %h3.feature__tagline Understanding cannabis is getting easier.
       %p.feature__about We're empowering medical & recreational customers to record their personal experiences with cannabis through smart software.
