--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* http://meyerweb.com/eric/tools/css/reset/
- * v2.0 | 20110126
- * License: none (public domain) */
+   v2.0 | 20110126
+   License: none (public domain) */
 @import url("https://fonts.googleapis.com/css?family=Libre+Baskerville");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css");
@@ -40,7 +40,7 @@ blockquote, q {
 
 blockquote:before, blockquote:after,
 q:before, q:after {
-  content: "";
+  content: '';
   content: none; }
 
 table {
@@ -70,21 +70,17 @@ p {
 @media screen and (min-width: 40em) {
   h1 {
     font-size: 3.998em; }
-
   h2 {
     font-size: 2.827em; }
-
   h3 {
     font-size: 1.999em; }
-
   h4 {
     font-size: 1.414em; }
-
   h5 {
     font-size: 0.707em; }
-
   h6 {
     font-size: 0.5em; } }
+
 input {
   display: block;
   width: 100%;
@@ -108,7 +104,7 @@ body {
   position: relative; }
 
 .feature {
-  background-image: url("media/get-budding-72798.jpg");
+  background-image: url("img/get-budding-72798.jpg");
   background-size: cover;
   background-position: center center;
   overflow: hidden;
@@ -123,9 +119,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #BDB1D4;
-  background-image: -webkit-linear-gradient(#BDB1D4 0, #6559A0 100%);
-  background-image: linear-gradient(#BDB1D4 0, #6559A0 100%);
+  linear-gradient: #BDB1D4 0, #6559A0 100%;
   opacity: 0.7;
   z-index: 1;
   animation: opacity-fade--campaign 2s ease-in-out; }
@@ -152,31 +146,9 @@ body {
   font-family: "Libre Baskerville", Baskerville, Georgia, serif; }
   @media screen and (min-width: 40em) {
     .feature__headline {
-      display: -webkit-box;
-      display: -moz-box;
-      display: box;
-      display: -webkit-flex;
-      display: -moz-flex;
-      display: -ms-flexbox;
       display: flex;
-      -webkit-box-align: center;
-      -moz-box-align: center;
-      box-align: center;
-      -webkit-align-items: center;
-      -moz-align-items: center;
-      -ms-align-items: center;
-      -o-align-items: center;
       align-items: center;
-      -ms-flex-align: center;
-      -webkit-box-pack: center;
-      -moz-box-pack: center;
-      box-pack: center;
-      -webkit-justify-content: center;
-      -moz-justify-content: center;
-      -ms-justify-content: center;
-      -o-justify-content: center;
       justify-content: center;
-      -ms-flex-pack: center;
       margin-top: 1em;
       margin-bottom: 0.5em; } }
 
@@ -214,7 +186,7 @@ body {
   margin: 1em auto 0; }
 
 section.email {
-  background-image: url("media/pattern.png");
+  background-image: url("img/pattern.png");
   background-color: #004364;
   padding: 2em 1em;
   color: white; }
@@ -282,11 +254,13 @@ footer {
     opacity: 0; }
   100% {
     opacity: 1; } }
+
 @keyframes opacity-fade--campaign {
   0% {
     opacity: 0; }
   100% {
     opacity: 0.7; } }
+
 @keyframes push-up {
   0% {
     top: -10px; }
