--- a/haml/index.haml
+++ b/haml/index.haml
@@ -29,7 +29,7 @@
     .feature__overlay
 
       %h1.feature__headline
-        %img.feature__logo(src="img/tetragramglyph.png")
+        %img.feature__logo(src="/img/tetragramglyph.png")
         Tetragram
       %h3.feature__tagline Understanding cannabis is getting easier.
       %p.feature__about We're empowering medical & recreational customers to record their personal experiences with cannabis through smart software.
