--- a/haml/index.haml
+++ b/haml/index.haml
@@ -25,14 +25,12 @@
     ga('create', 'UA-102656117-1', 'auto');
     ga('send', 'pageview');
 %body
+  %header
+    %img.logo(src="/img/tetragram-logo.png")
   %section.feature
     .feature__overlay
-
-      %h1.feature__headline
-        %img.feature__logo(src="/img/tetragramglyph.png")
-        Tetragram
-      %h3.feature__tagline Understanding cannabis is getting easier.
-      %p.feature__about We're empowering medical & recreational customers to record their personal experiences with cannabis through smart software.
+      %h3.feature__tagline Pain management is getting easier.
+      %p.feature__about We're empowering medical customers to record their personal experiences with pain management through smart software.
   %section.email
     %h2 Sign up for Email Updates
     %p We don't sell email addresses. We send emails infrequently.
