--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -7,13 +7,22 @@ body{
   color: $blue-s1;
   position: relative;
 }
+header{
+  background-color: white;
+}
+
+.logo{
+  max-width: 20rem;
+  width: 100%;
+}
 .feature{
-  background-image: url('img/get-budding-72798.jpg');
+  background-image: url('img/phone-user.jpg');
   background-size: cover;
   background-position: center center;
   overflow: hidden;
   position: relative;
   padding-bottom: 2em;
+  height: 80vh;
 }
 
 .feature::after{
@@ -34,40 +43,14 @@ body{
   position:relative;
   z-index:2;
 }
-.feature__logo{
-  width: 100%;
-  max-width: 15rem;
-  display:block;
-  margin:0 auto 0;
-  padding: 2rem;
-  @media #{$tablet}{
-    &{
-      margin-left: 0;
-      margin-right: 2rem;
-    }
-  }
-}
-.feature__headline{
-  color: white;
-  text-align: center;
-  margin-bottom: 1em;
-  font-family: $serif;
-  @media #{$tablet}{&{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1em;
-    margin-bottom: 0.5em;
-  }}
-}
 .feature__tagline{
-  padding:0.5em;
-  color: $blue;
-  background-color:transparentize(white, .2);
+  padding:1em;
+  font-size: 3.5rem;
+  color: $blue-t2;
   position:relative;
   text-align: center;
   max-width: 45rem;
-  margin: 0 auto 3em;
+  margin: 0 auto 0;
 }
 /*.feature__tagline:before,.feature__tagline:after{
   content:'';
