--- a/style.css
+++ b/style.css
@@ -103,13 +103,21 @@ body {
   color: #004364;
   position: relative; }
 
+header {
+  background-color: white; }
+
+.logo {
+  max-width: 20rem;
+  width: 100%; }
+
 .feature {
-  background-image: url("img/get-budding-72798.jpg");
+  background-image: url("img/phone-user.jpg");
   background-size: cover;
   background-position: center center;
   overflow: hidden;
   position: relative;
-  padding-bottom: 2em; }
+  padding-bottom: 2em;
+  height: 80vh; }
 
 .feature::after {
   content: '';
@@ -128,38 +136,14 @@ body {
   position: relative;
   z-index: 2; }
 
-.feature__logo {
-  width: 100%;
-  max-width: 15rem;
-  display: block;
-  margin: 0 auto 0;
-  padding: 2rem; }
-  @media screen and (min-width: 40em) {
-    .feature__logo {
-      margin-left: 0;
-      margin-right: 2rem; } }
-
-.feature__headline {
-  color: white;
-  text-align: center;
-  margin-bottom: 1em;
-  font-family: "Libre Baskerville", Baskerville, Georgia, serif; }
-  @media screen and (min-width: 40em) {
-    .feature__headline {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-top: 1em;
-      margin-bottom: 0.5em; } }
-
 .feature__tagline {
-  padding: 0.5em;
-  color: #0088CA;
-  background-color: rgba(255, 255, 255, 0.8);
+  padding: 1em;
+  font-size: 3.5rem;
+  color: #A0DBED;
   position: relative;
   text-align: center;
   max-width: 45rem;
-  margin: 0 auto 3em; }
+  margin: 0 auto 0; }
 
 /*.feature__tagline:before,.feature__tagline:after{
   content:'';
